--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,17 @@
     "name": "pfrenssen/piwik-reporting-api",
     "description": "PHP client library to query the Piwik Reporting API.",
     "type": "library",
-    "require": {
-        "guzzlehttp/guzzle": "~6.0"
-    },
     "license": "GPL-3.0",
     "authors": [
         {
             "name": "Pieter Frenssen",
             "email": "pieter@frenssen.be"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {"Piwik\\ReportingApi\\": "src/"}
+    },
+    "require": {
+        "guzzlehttp/guzzle": "~6.0"
+    },
 }
