--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "psr-4": {"Piwik\\ReportingApi\\": "src/"}
     },
     "require": {
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "phpunit/phpunit": "^7.0"
     }
 }
