Run coding standards checks on Travis CI.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     },
     "require": {
         "guzzlehttp/guzzle": "~6.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.2"
     }
 }
