--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "psr-4": {"Piwik\\ReportingApi\\": "src/"}
     },
     "require": {
-        "guzzlehttp/guzzle": "~6.0",
-        "phpunit/phpunit": "^7.0"
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^5.0|^6.0|^7.0",
         "squizlabs/php_codesniffer": "^3.2"
     }
 }
