--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "psr-4": {"Matomo\\ReportingApi\\": "src/"}
     },
     "require": {
-        "guzzlehttp/guzzle": "~6|~7",
+        "php": "^7.4|^8.0",
+        "guzzlehttp/guzzle": "~7",
         "phpspec/prophecy-phpunit": "^2.0"
     },
     "require-dev": {
